[package]
name = "asky"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Libray to create good looking prompts in the terminal"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["ask", "cli", "prompt", "question", "readline"]
repository = "https://github.com/axelvc/asky/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, optional = true, features = [ "bevy_render", "bevy_ui", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_sprite", "bevy_winit", "multi-threaded" ] }
# colored = { version = "2.0.0", default-features = false }
# colored = { path = "../colored", default-features = false }
colored = { git = "https://github.com/shanecelis/colored.git", branch="colored_strings", default-features = false }
crossterm = { version = "0.26.0", optional = true }
futures-lite = "2.0.1"
promise_out = "1.0.0"

[features]
default = ["terminal"]
terminal = ["dep:crossterm", "colored/tty", "colored/color"]
bevy = ["dep:bevy"]

[[example]]
name = "bevy"
path = "examples/bevy.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm"
path = "examples/bevy/confirm.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm-raw-async"
path = "examples/bevy/confirm_raw_async.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm-async"
path = "examples/bevy/confirm_async.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-funny"
path = "examples/bevy/funny.rs"
required-features = [ "bevy" ]
