[package]
name = "asky"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Libray to create good looking prompts in the terminal"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["ask", "cli", "prompt", "question", "readline"]
repository = "https://github.com/axelvc/asky/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, optional = true, features = [ "bevy_render", "bevy_ui", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_sprite", "bevy_winit", "multi-threaded" ] }
colored = { version = "2.0.0", default-features = false }
# colored = { path = "../colored", default-features = false }
# colored = { git = "https://github.com/shanecelis/colored.git", branch="colored_strings", default-features = false }
crossterm = { version = "0.26.0", optional = true }
divide-and-separate = { version = "0.1.0", path = "../divide-and-separate" }
futures-lite = "2.0.1"
promise_out = "1.0.0"
# text-style = "0.3.0"
text-style = { path = "../text-style-rs", default-features = false, optional = true }

[features]
default = ["terminal"]
terminal = ["dep:crossterm"] #, "colored/tty", "colored/color"]
bevy = ["dep:bevy", "colored/no-color", "dep:text-style", "text-style/colored", "text-style/bevy"]


[[example]]
name = "confirm"
path = "examples/confirm.rs"
required-features = [ "terminal" ]

[[example]]
name = "message"
path = "examples/message.rs"
required-features = [ "terminal" ]

[[example]]
name = "multi_select"
path = "examples/multi_select.rs"
required-features = [ "terminal" ]

[[example]]
name = "number"
path = "examples/number.rs"
required-features = [ "terminal" ]

[[example]]
name = "password"
path = "examples/password.rs"
required-features = [ "terminal" ]

[[example]]
name = "select"
path = "examples/select.rs"
required-features = [ "terminal" ]

[[example]]
name = "text"
path = "examples/text.rs"
required-features = [ "terminal" ]

[[example]]
name = "toggle"
path = "examples/toggle.rs"
required-features = [ "terminal" ]

[[example]]
name = "bevy"
path = "examples/bevy.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm"
path = "examples/bevy/confirm.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm-raw-async"
path = "examples/bevy/confirm_raw_async.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-confirm-async"
path = "examples/bevy/confirm_async.rs"
required-features = [ "bevy" ]

[[example]]
name = "bevy-funny"
path = "examples/bevy/funny.rs"
required-features = [ "bevy" ]
